--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,6 +1,7 @@
 doctype html
 html
     head
+        title Pharmacy
         link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
         link(href="/vendor/bootstrap/dist/css/bootstrap.css", rel="stylesheet")
         link(href="/css/site.css", rel="stylesheet")
