--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,6 +1,19 @@
 extends ../includes/layout.jade
 
 block main-content
+    .navbar.navbar-inverse.navbar-fixed-top
+        .container
+            .navbar-header
+                a.navbar-brand(href="/") Pharmacy
+                    h6 Le référentiel
+            .navbar-collapse.collapse
+                ul.nav.navbar-nav
+                    li
+                        a(href="/") Accueil
+
     section.content
         div(ng-view)
     h2=mongoMessage
+
+    footer.container.text-center
+        p &copy; MHA Company
