--- a/server/views/partials/main.html
+++ b/server/views/partials/main.html
@@ -1,1 +1,1 @@
-<h1>this is a partial</h1><h2>{{var}}</h2>
+<div class="container"><div class="jumbotron"><h1>Pharmacy</h1><p>Référentiel des médicaments au Maroc</p></div></div>
