--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -12,3 +12,9 @@ footer
   padding-right 15px
   p
     border-top 1px solid #d7e0e1
+
+.navbar-form
+  .form-group
+    margin-left 10px
+  button
+    margin-left 10px
