--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -10,10 +10,11 @@ block main-content
                 ul.nav.navbar-nav
                     li
                         a(href="/") Accueil
+                div(ng-include="'/partials/account/views/navbar-login'")
 
     section.content
         div(ng-view)
-    h2=mongoMessage
+
 
     footer.container.text-center
         p &copy; MHA Company
